--- a/tests.ipynb
+++ b/tests.ipynb
@@ -100,12 +100,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "706cccaf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "message = message = \"\"\"\n",
+    "message = \"\"\"\n",
     "The supermodels name is goblin master.\n",
     "\n",
     "And finally, bird-watchers everywhere have reported that the nation’s\n",
@@ -971,6 +971,164 @@
    "source": [
     "len(pd_results)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2c6adf36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/leondomagalski/DecoderAttention/.venv/lib/python3.12/site-packages/pandas/io/formats/format.py:1458: RuntimeWarning: overflow encountered in cast\n",
+      "  has_large_values = (abs_vals > 1e6).any()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>gen_step</th>\n",
+       "      <th>attention</th>\n",
+       "      <th>query_token</th>\n",
+       "      <th>key_token</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>gen_txt[0]</td>\n",
+       "      <td>&lt;bos&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.986816</td>\n",
+       "      <td>gen_txt[0]</td>\n",
+       "      <td>▁number</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.977051</td>\n",
+       "      <td>gen_txt[0]</td>\n",
+       "      <td>▁fell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.959961</td>\n",
+       "      <td>gen_txt[0]</td>\n",
+       "      <td>▁fell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.958984</td>\n",
+       "      <td>gen_txt[0]</td>\n",
+       "      <td>What</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1235</th>\n",
+       "      <td>30</td>\n",
+       "      <td>0.001690</td>\n",
+       "      <td>gen_txt[30]</td>\n",
+       "      <td>context[1643]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1236</th>\n",
+       "      <td>30</td>\n",
+       "      <td>0.001671</td>\n",
+       "      <td>gen_txt[30]</td>\n",
+       "      <td>context[1642]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1237</th>\n",
+       "      <td>30</td>\n",
+       "      <td>0.001515</td>\n",
+       "      <td>gen_txt[30]</td>\n",
+       "      <td>\\n\\n</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1238</th>\n",
+       "      <td>30</td>\n",
+       "      <td>0.001492</td>\n",
+       "      <td>gen_txt[30]</td>\n",
+       "      <td>▁the</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1239</th>\n",
+       "      <td>30</td>\n",
+       "      <td>0.001472</td>\n",
+       "      <td>gen_txt[30]</td>\n",
+       "      <td>.</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1240 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      gen_step  attention  query_token      key_token\n",
+       "0            0   1.000000   gen_txt[0]          <bos>\n",
+       "1            0   0.986816   gen_txt[0]        ▁number\n",
+       "2            0   0.977051   gen_txt[0]          ▁fell\n",
+       "3            0   0.959961   gen_txt[0]          ▁fell\n",
+       "4            0   0.958984   gen_txt[0]           What\n",
+       "...        ...        ...          ...            ...\n",
+       "1235        30   0.001690  gen_txt[30]  context[1643]\n",
+       "1236        30   0.001671  gen_txt[30]  context[1642]\n",
+       "1237        30   0.001515  gen_txt[30]           \\n\\n\n",
+       "1238        30   0.001492  gen_txt[30]           ▁the\n",
+       "1239        30   0.001472  gen_txt[30]              .\n",
+       "\n",
+       "[1240 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd_results[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9913845f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
